--- a/ChattingPractice/en.lproj/CPViewController.xib
+++ b/ChattingPractice/en.lproj/CPViewController.xib
@@ -43,9 +43,9 @@
 						<array class="NSMutableArray" key="NSSubviews"/>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="876470999"/>
+						<reference key="NSNextKeyView" ref="617447815"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="364675887">
+						<object class="NSColor" key="IBUIBackgroundColor" id="1001382532">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -59,16 +59,16 @@
 						<float key="IBUISectionHeaderHeight">22</float>
 						<float key="IBUISectionFooterHeight">22</float>
 					</object>
-					<object class="IBUIView" id="876470999">
+					<object class="IBUIView" id="617447815">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUITextField" id="544061634">
-								<reference key="NSNextResponder" ref="876470999"/>
+							<object class="IBUITextField" id="218245456">
+								<reference key="NSNextResponder" ref="617447815"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{5, 6}, {249, 31}}</string>
-								<reference key="NSSuperview" ref="876470999"/>
-								<reference key="NSNextKeyView" ref="293022389"/>
+								<reference key="NSSuperview" ref="617447815"/>
+								<reference key="NSNextKeyView" ref="812932126"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -79,7 +79,7 @@
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MAA</bytes>
-									<object class="NSColorSpace" key="NSCustomColorSpace" id="852451775">
+									<object class="NSColorSpace" key="NSCustomColorSpace" id="577830125">
 										<int key="NSID">2</int>
 									</object>
 								</object>
@@ -98,11 +98,11 @@
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="293022389">
-								<reference key="NSNextResponder" ref="876470999"/>
+							<object class="IBUIButton" id="812932126">
+								<reference key="NSNextResponder" ref="617447815"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{259, 3}, {60, 38}}</string>
-								<reference key="NSSuperview" ref="876470999"/>
+								<reference key="NSSuperview" ref="617447815"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -111,7 +111,7 @@
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUIButtonType">1</int>
 								<string key="IBUINormalTitle">done</string>
-								<reference key="IBUIHighlightedTitleColor" ref="364675887"/>
+								<reference key="IBUIHighlightedTitleColor" ref="1001382532"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
@@ -133,7 +133,7 @@
 						</array>
 						<string key="NSFrame">{{0, 416}, {320, 44}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSNextKeyView" ref="544061634"/>
+						<reference key="NSNextKeyView" ref="218245456"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">10</int>
@@ -4538,7 +4538,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MC43NQA</bytes>
-					<reference key="NSCustomColorSpace" ref="852451775"/>
+					<reference key="NSCustomColorSpace" ref="577830125"/>
 				</object>
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
@@ -4567,7 +4567,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">msgView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="876470999"/>
+						<reference key="destination" ref="617447815"/>
 					</object>
 					<int key="connectionID">25</int>
 				</object>
@@ -4575,7 +4575,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">msgTextField</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="544061634"/>
+						<reference key="destination" ref="218245456"/>
 					</object>
 					<int key="connectionID">26</int>
 				</object>
@@ -4583,9 +4583,18 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">msgButton</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="293022389"/>
+						<reference key="destination" ref="812932126"/>
 					</object>
 					<int key="connectionID">27</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">backgroundTouched:</string>
+						<reference key="source" ref="774585933"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">1</int>
+					</object>
+					<int key="connectionID">30</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -4606,15 +4615,24 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="544061634"/>
+						<reference key="source" ref="218245456"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">29</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">backgroundTouched:</string>
+						<reference key="source" ref="218245456"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">20</int>
+					</object>
+					<int key="connectionID">31</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">msgSend:</string>
-						<reference key="source" ref="293022389"/>
+						<reference key="source" ref="812932126"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">7</int>
 					</object>
@@ -4645,7 +4663,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<reference key="object" ref="774585933"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="266526290"/>
-							<reference ref="876470999"/>
+							<reference ref="617447815"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -4657,22 +4675,22 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="876470999"/>
+						<reference key="object" ref="617447815"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="544061634"/>
-							<reference ref="293022389"/>
+							<reference ref="218245456"/>
+							<reference ref="812932126"/>
 						</array>
 						<reference key="parent" ref="774585933"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">23</int>
-						<reference key="object" ref="544061634"/>
-						<reference key="parent" ref="876470999"/>
+						<reference key="object" ref="218245456"/>
+						<reference key="parent" ref="617447815"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="293022389"/>
-						<reference key="parent" ref="876470999"/>
+						<reference key="object" ref="812932126"/>
+						<reference key="parent" ref="617447815"/>
 					</object>
 				</array>
 			</object>
@@ -4684,14 +4702,16 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<string key="22.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="6.CustomClassName">UIControl</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="8.CustomClassName">UI</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">29</int>
+			<int key="maxID">31</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
